--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "name": "teta-counter",
+  "version": "0.0.1",
+  "description": "A React Native app for counting breastfeeding intakes",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
@@ -12,23 +15,23 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/samples": "~3.0.0",
-    "@expo/vector-icons": "^10.0.1",
-    "@react-navigation/web": "^1.0.0-alpha.9",
-    "expo": "^33.0.0",
-    "expo-asset": "^5.0.0",
-    "expo-constants": "^5.0.0",
-    "expo-font": "^5.0.0",
-    "expo-web-browser": "^5.0.0",
-    "react": "16.8.3",
-    "react-dom": "^16.8.6",
+    "@expo/samples": "3.0.3",
+    "@expo/vector-icons": "10.0.3",
+    "@react-navigation/web": "1.0.0-alpha.9",
+    "expo": "33.0.7",
+    "expo-asset": "5.0.1",
+    "expo-constants": "5.0.1",
+    "expo-font": "5.0.1",
+    "expo-web-browser": "5.0.3",
+    "react": "16.8.6",
+    "react-dom": "16.8.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
-    "react-native-web": "^0.11.4",
-    "react-navigation": "^3.11.0"
+    "react-native-web": "0.11.5",
+    "react-navigation": "3.11.0"
   },
   "devDependencies": {
-    "babel-preset-expo": "^5.1.0",
-    "jest-expo": "^33.0.0"
+    "babel-preset-expo": "5.2.0",
+    "jest-expo": "33.0.2"
   },
   "private": true
 }
